[Bugfix] LeftPresentation group spacing fix on mobile (revealed after adding new mobile buttons)

--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -224,6 +224,7 @@ footer {
   p { color: $c_deepGreen; font-family: 'Federo', serif; font-size: 1.2em; padding:0; }
   div { color: $c_blk; font-family: 'Arial', serif; font-size: 0.7em;}
   img { width: 200px; border: solid 2px #000; margin:0 5px 0 0;}
+
 }
 
 
@@ -256,7 +257,6 @@ footer {
 
 .leftPres {
   float: left; 
-  margin: 10px 5% 0 5%;
   width: 40%; 
 }
 
